docs/docs/2.0.0-rc6/formats/zarr.md
---
description: Read Zarr v3 stores with read_zarr(). Chunk-level predicate pushdown fetches only the chunks that a query needs.
---

# Zarr

## Read the files

```text
read_zarr(glob_paths)
read_zarr(glob_paths, dimensions)
read_zarr(glob_paths, dimensions, skip_unbroadcastable)
```

Beacon reads the Zarr stores that match one or more glob patterns. Each path must point at a
`zarr.json` entry file.

The optional `dimensions` argument selects the arrays. Beacon returns an array only if the list
holds all of its dimensions. Use the argument to drop arrays with many dimensions.

The optional `skip_unbroadcastable` argument sets what Beacon does with a group that does not fit the list. Beacon fails the query by default. Set it to true to skip the group instead. Beacon writes a warning and reads the next group.

Predicate pushdown is automatic. Beacon prunes chunks and slices the coordinate dimensions such as
`time`, `latitude` and `longitude`. It uses the `WHERE` clause of your query. You declare no
statistics columns.

```sql
SELECT * FROM read_zarr('sst/*/zarr.json')

-- Range queries are pruned automatically
SELECT time, sst
FROM read_zarr('sst/*/zarr.json')
WHERE time >= '2024-01-01'
```

## Inspect the schema

Check the columns and the types before you write a query:

```sql
SELECT * FROM read_zarr('sst/*/zarr.json') LIMIT 0;
```

[Inspect a schema](/docs/2.0.0-rc6/formats/inspect-a-schema) compares the `_schema` functions,
`SUMMARIZE`, `DESCRIBE` and `LIMIT 0`, and says what each one costs.

## Format details

Beacon queries a Zarr dataset with chunk-level predicate pushdown. It reads only the chunks that can
match your predicates. Spatial and time range queries are therefore fast, also on a large
multi-dimensional store.

- Beacon supports Zarr v3 stores. The `zarr.json` entry file marks such a store. Beacon does not find v2 stores, which use `.zarray`, `.zgroup` and `.zattrs` files.
- Beacon decompresses a compressed chunk automatically. It supports zstd, gzip, blosc and more.
- One external table can hold several Zarr stores. Use a glob pattern such as `sst/*/zarr.json`.
- Beacon fully supports S3 and other object stores.

### Array attributes

A Zarr array holds its attributes in the `attributes` section of its `zarr.json`. Beacon shows these
as extra columns. It uses dot notation: `<array>.<attribute>`. The `units` attribute of the `sst`
array becomes the column `sst.units`.

An attribute column keeps the type from the file: string, integer, float and so on.

A root attribute of the store belongs to no array. Beacon shows it with a leading dot and no array
prefix: `.<attribute>`. The root attribute `Conventions` becomes the column `.Conventions`.

```sql
SELECT sst, "sst.units", "sst.long_name", ".Conventions"
FROM read_zarr(['sst/*/zarr.json'])
LIMIT 1
```

Limitations:

- Beacon does not support user-defined data types.

:::tip
Predicate pushdown is automatic. Beacon prunes chunks and slices the coordinate dimensions such as
`time`, `latitude` and `longitude`. It uses the filters of your query. You configure nothing.

Do you query a collection often? Then convert the Zarr stores into one
[Atlas](/docs/2.0.0-rc6/formats/atlas) collection. Atlas is an array store
with statistics. Beacon can drop whole datasets before it reads a chunk.
:::

## As an external table

A Zarr table must point at a `zarr.json` entry file, not at a folder:

```sql
CREATE EXTERNAL TABLE sst_zarr
STORED AS ZARR
LOCATION 'sst/zarr.json'
```

Use a glob to cover several Zarr stores:

```sql
CREATE EXTERNAL TABLE sst_zarr
STORED AS ZARR
LOCATION 'sst/*/zarr.json'
```

See [Create External Tables](/docs/2.0.0-rc6/data-sources/external-tables) for the full DDL. See [Data Sources](/docs/2.0.0-rc6/data-sources/) for the
full read model.

### `OPTIONS`

`STORED AS ZARR` reads three keys:

| Option | Type | Default | Description |
| --- | --- | --- | --- |
| `read_dimensions` | List of dimension names | The default grid of each store | The dimensions the table reads. Beacon returns an array only if the list holds every dimension of that array. |
| `skip_unbroadcastable` | Boolean | `false` | Skip a group that does not fit `read_dimensions`. Beacon writes a warning and reads the next group. Without it the query fails. |
| `enable_statistics` | Boolean | `true` (`BEACON_ZARR_ENABLE_STATISTICS`) | Accepted, and without effect today. Beacon rejects a value that is not a boolean, and then reads the server setting alone: `ANALYZE FILES` resolves a format per store, not per table. Set `BEACON_ZARR_ENABLE_STATISTICS` to turn the column ranges off. |

```sql
CREATE EXTERNAL TABLE sst_zarr
STORED AS ZARR
LOCATION 'sst/*/zarr.json'
OPTIONS ('read_dimensions' 'time,lat,lon')
```

See [`OPTIONS`](/docs/2.0.0-rc6/sql/create-external-table#options) for the rules that hold for every key. See
[Arrays to tables](/docs/2.0.0-rc6/arrays-to-tables#the-dimensions-argument) for the grid rule.
